src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Billing Support Process</fullName>
        <description>For internal requests made from Sales to Billing</description>
        <isActive>true</isActive>
        <values>
            <fullName>Client Responded</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed by Billing</fullName>
        </values>
        <values>
            <fullName>Completed by Billing %26 Ops</fullName>
        </values>
        <values>
            <fullName>Completed by Ops</fullName>
        </values>
        <values>
            <fullName>Director Approved</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>Waiting on Client</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cancellation Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Responded</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting on Client</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Client Success Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open Unsolved</fullName>
        </values>
        <values>
            <fullName>Pending Acceptance</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Waiting on Client</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Migration Case Process</fullName>
        <description>For internal migration requests made from Sales to the Migrations Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Awaiting Re-Verification</fullName>
        </values>
        <values>
            <fullName>Awaiting Requirements</fullName>
        </values>
        <values>
            <fullName>Awaiting Verification</fullName>
        </values>
        <values>
            <fullName>Blocked</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Enterprise Awaiting Launch</fullName>
        </values>
        <values>
            <fullName>Enterprise UAT</fullName>
        </values>
        <values>
            <fullName>Enterprise Waiting on Client</fullName>
        </values>
        <values>
            <fullName>Extended Verification</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Invalid Credentials</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Credentials</fullName>
        </values>
        <values>
            <fullName>Re-Requested Credentials</fullName>
        </values>
        <values>
            <fullName>Requirements Review</fullName>
        </values>
        <values>
            <fullName>Requires Rerun</fullName>
        </values>
        <values>
            <fullName>UAT Review</fullName>
        </values>
        <values>
            <fullName>VE Assigned</fullName>
        </values>
        <values>
            <fullName>VE In Progress</fullName>
        </values>
        <values>
            <fullName>VE QA</fullName>
        </values>
        <values>
            <fullName>Verification</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Migration Specialist Process</fullName>
        <description>Migration Specialist case process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open Unsolved</fullName>
        </values>
        <values>
            <fullName>Pending Acceptance</fullName>
        </values>
        <values>
            <fullName>Scoping</fullName>
        </values>
        <values>
            <fullName>Waiting on Client</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Support Process</fullName>
        <description>For Partner Support Requests &amp; Approvals</description>
        <isActive>true</isActive>
        <values>
            <fullName>Acknowledged</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Other Department</fullName>
        </values>
        <values>
            <fullName>Waiting on Partner</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Premium Account Services Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Response</fullName>
        </values>
        <values>
            <fullName>Call Scheduled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Cases</fullName>
        <description>Sales statuses - New, In Progress, Closed</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open Unsolved</fullName>
        </values>
        <values>
            <fullName>Sales follow up</fullName>
        </values>
        <values>
            <fullName>Unsubscribe</fullName>
        </values>
        <values>
            <fullName>Waiting on Client</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>zProfessional Services</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Migration in Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>zUnpacking Support Process</fullName>
        <description>Assigned, Awaiting Review, Unpacked</description>
        <isActive>false</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Acceptance</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Added_to_Auto_Close_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for troubleshooting time based WFRs; only visible to admins</description>
        <inlineHelpText>used for troubleshooting time based WFRs; only visible to admins</inlineHelpText>
        <label>BA Added to Auto-Close List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_URL__c</fullName>
        <description>Temp URL + /admin - used by Client Success when they need to log into a store&apos;s back end</description>
        <formula>Temporary_Store_URL__c + &apos;/admin/staff&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Temp URL + /admin - used by Client Success when they need to log into a store&apos;s back end</inlineHelpText>
        <label>Admin URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Days_Since_Last_Update__c</fullName>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days) Since Last Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Email__c</fullName>
        <description>Used on professional services page layout.</description>
        <label>Alternate Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Phone__c</fullName>
        <description>Used on professional services page layout.</description>
        <label>Alternate Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact__c</fullName>
        <description>Used on professional services page layout.</description>
        <label>Alternate Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Offered__c</fullName>
        <description>Cancellations : What is the discounted value offered to the client in return for them agreeing not to cancel?</description>
        <inlineHelpText>What is the discounted value offered to the client in return for them agreeing not to cancel?</inlineHelpText>
        <label>Amount Offered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>Partner Application Status</description>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <inlineHelpText>Will this content become a new article, or be a change/addition to an existing article?</inlineHelpText>
        <label>Article Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BC_Migration_Assignee__c</fullName>
        <description>Migrations : Which Bigcommerce migration team member is working this case</description>
        <inlineHelpText>Which Bigcommerce migration team member is working this case</inlineHelpText>
        <label>zBC Migration Assignee</label>
        <picklist>
            <controllingField>Technician__c</controllingField>
            <picklistValues>
                <fullName>Adam Seabrook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alvin Sanchez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andres Rodriguez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeremy Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Tuck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jordan Chen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kristy Miller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lee Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nathan Wendt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sebastian Forsberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim Shuman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TechOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backpay_Amount__c</fullName>
        <description>Partner Backpay Amount</description>
        <label>Backpay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backpay_Paid_Date__c</fullName>
        <description>Partner Backpay Paid Date</description>
        <label>Backpay Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backpay_Requested_Date__c</fullName>
        <description>Partner Backpay Requested Date</description>
        <label>Backpay Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backpay_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner Backpay Requested</description>
        <label>Backpay Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bigcommerce_Plan__c</fullName>
        <description>Formula pulling the associated subscription&apos;s product name to the case record</description>
        <formula>IF( ISBLANK( Opportunity__c ) = FALSE, Opportunity__r.Product__c , 
IF( ISBLANK(  Subscription__c  ) = FALSE,  Subscription__r.New_Product_Plan__c  ,
IF( ISBLANK(  Lead__c  ) = FALSE, &quot;Trial&quot; ,
NULL)))</formula>
        <inlineHelpText>Store plan associated with the store on this case.</inlineHelpText>
        <label>Bigcommerce Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bigcommerce_Store_Password__c</fullName>
        <description>Migrations : populated by requestor so migrations team can access client&apos;s store</description>
        <inlineHelpText>For use by the Migration team.</inlineHelpText>
        <label>zBigcommerce Store Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bigcommerce_Store_URL__c</fullName>
        <description>Formula pulling the associated subscription&apos;s Store URL to the case record</description>
        <formula>IF( ISBLANK( Opportunity__c ) = FALSE, Opportunity__r.StoreURL__c , 
IF( ISBLANK(Subscription__r.StoreURL__c ) = FALSE, Subscription__r.StoreURL__c , NULL))</formula>
        <inlineHelpText>Store URL associated with the store on this case.</inlineHelpText>
        <label>Bigcommerce Store URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bigcommerce_Store_User_Name__c</fullName>
        <description>Migrations : populated by requestor so migrations team can access client&apos;s store</description>
        <inlineHelpText>For use by the Migration team.</inlineHelpText>
        <label>Bigcommerce Store User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SSquad Unpacking type field</description>
        <label>zCSS / Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SSquad Unpacking type field</description>
        <label>zCSV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <description>Used on professional services page layout.</description>
        <label>zCall Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Call_Topics__c</fullName>
        <description>Used on professional services page layout.</description>
        <label>zCall Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Web Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Zones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Persona__c</fullName>
        <description>Cancellation person - requested by AR-5168</description>
        <inlineHelpText>Persona, populated by the Cancellation team.</inlineHelpText>
        <label>Cancellation Persona</label>
        <picklist>
            <picklistValues>
                <fullName>Get Rich Gary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Up Suzy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Owen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miderprise Marty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Product_Feature_Functionali__c</fullName>
        <description>Cancellation product reason - requested by AR 5168</description>
        <inlineHelpText>Cancellation product reason - requested by AR 5168</inlineHelpText>
        <label>Cancellation Product Reason</label>
        <picklist>
            <picklistValues>
                <fullName>100% Uptime Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment scheduler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customization of look and feel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faceted Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift certificates/Coupon codes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importing Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration with Third Party tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory/Billing Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Themes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Language Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple store back-end</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Source Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option Sets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (require comments)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsupported Cart - Migration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>zCancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>App Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t put in the time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce is too hard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalations Case Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Theme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of integrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaving for competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Callback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Help/SEO Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mistakenly opened the account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Stores/ Consolidating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No/Low sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not moving forward with the business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not serious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not technical enough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not using the store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarding Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Specialist__c</fullName>
        <description>Cancellations : tracks who saved the client from cancelling</description>
        <label>Cancellation Specialist</label>
        <picklist>
            <picklistValues>
                <fullName>Abbey Parker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alvaro Lira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foy Howard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lauren Gettler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Squad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Katherine Kemp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delisa Doria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warren Kleinman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christopher Partanen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quoc Dang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isaac Boyles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holt Giesen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cortni Keaveney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alyss Noland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Olivarez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tyler Pouchot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt McDonald</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danielle Canterberry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Leach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charles (Chas) Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christie Florence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Borchman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JoAnna Moon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rory Regnell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laurie (Johnson) Zapinsk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timothy Azark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jose Pulido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Mullins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derek Donovan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carousel_Images__c</fullName>
        <inlineHelpText>For use by the Migration team.</inlineHelpText>
        <label>Carousel Images</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Age_in_Days__c</fullName>
        <description>This field is the Age in Days from created to closed or from created to current date if not yet closed</description>
        <formula>IF(
  IsClosed, ClosedDate-CreatedDate, NOW()-CreatedDate
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is the Age in Days from created to closed or from created to current date if not yet closed</inlineHelpText>
        <label>Case Age (in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Closed_By__c</fullName>
        <description>Support : populated by WFR to capture the name of the user that last moved the case of a status of Closed if NOT the API user</description>
        <inlineHelpText>Captures the name of the user that last moved the case of a status of Closed if NOT the API user</inlineHelpText>
        <label>Case Closed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <description>For reporting graphs and dashboards : all cases = 1</description>
        <formula>1</formula>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Duration_in_days__c</fullName>
        <formula>IF(
  IsClosed, ClosedDate -  CreatedDate, null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Duration (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Flag__c</fullName>
        <description>Support &amp; Billing : picklist used to indicate which flag color a case is so they can be visually grouped in list views.  Each team has their own definitions for what the colors mean to them</description>
        <label>Case Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PXU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Time_Worked_Records__c</fullName>
        <description>Support : Count of case time worked records associated to case</description>
        <label>Case Time Worked Records</label>
        <summaryForeignKey>Case_Time_Worked__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>